# libsift

./: .gitignore  .travis.yml  LICENSE  README.md
cpp/: .gitignore  CMakeLists.txt  README.md
cpp/cmake/: FindOpenImageIO.cmake
cpp/docs/: Doxyfile.in
cpp/docs/html/: _r_e_a_d_m_e_8md.html  annotated.html  classes.html  classsift_1_1_do_g_scale_space_pyramid-members.html  classsift_1_1_do_g_scale_space_pyramid.html  classsift_1_1_gaussian2_d-members.html  classsift_1_1_gaussian2_d.html  classsift_1_1_image-members.html  classsift_1_1_image.html  classsift_1_1_image_i_o_exception-members.html  classsift_1_1_image_i_o_exception.html  detect__sift_8cpp.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  files.html  functions.html  functions_func.html  functions_vars.html  gaussian_8cpp.html  gaussian_8h.html  gaussian_8h_source.html  globals.html  globals_func.html  hierarchy.html  image_8cpp.html  image_8h.html  image_8h_source.html  index.html  md___users_mikebao_github_libsift_cpp__r_e_a_d_m_e.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespacesift.html  pages.html
cpp/docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_1.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  namespaces_0.js  searchdata.js  variables_0.js
cpp/lib/: CMakeLists.txt  gaussian.cpp  gaussian.h  image.cpp  image.h
cpp/scripts/: install.sh  script.sh
cpp/src/: CMakeLists.txt  detectSift.cpp
cpp/test/: CMakeLists.txt  image_tests.cpp  main.cpp
scripts/: before_install.sh  install.sh  script.sh
vagrant/: Vagrantfile
