SET(LIB_SRCS 
    ${CMAKE_CURRENT_SOURCE_DIR}/image.cpp)

SET(LIB_HDRS
    ${CMAKE_CURRENT_SOURCE_DIR}/image.h)

ADD_LIBRARY(siftcpp SHARED ${LIB_SRCS} ${LIB_HDRS})
TARGET_INCLUDE_DIRECTORIES(siftcpp PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
TARGET_INCLUDE_DIRECTORIES(siftcpp SYSTEM PRIVATE ${OIIO_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(siftcpp ${OIIO_LIBRARIES})
