FUNCTION(TEST_ADD_DEPS TARGET)
    LIBSIFTCPP_ADD_DEPS(${TARGET})
    TARGET_INCLUDE_DIRECTORIES(${TARGET} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
ENDFUNCTION()

SET(TEST_SRCS
    ${CMAKE_CURRENT_SOURCE_DIR}/image_tests.cpp)

FOREACH(SRC ${TEST_SRCS})
    GET_FILENAME_COMPONENT(TEST_BASE ${SRC} NAME_WE)
    ADD_EXECUTABLE(${TEST_BASE} ${SRC})
    TEST_ADD_DEPS(${TEST_BASE})
    ADD_TEST(NAME ${TEST_BASE}
             WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
             COMMAND $<TARGET_FILE:${TEST_BASE}>)
ENDFOREACH()
